Finished third exercise, using a layout.

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,22 @@
 <html>
+  
   <body>
-    <h1>You're using a layout</h1>
+    <h1>Created using a layout</h1>
     <p>
-      <h3> I'm a header</h3>
-      <p>Put things in the header</p>
+      <h3>Example of a header</h3>
+      <p>Things in the header</p>
+      <ul>
+        <a href='http://google.com'>This is a link to google</a>
+      </ul>
       <a href='me.html'>Me</a>
-
+      <a href='kody.html'>Kody</a>
     </p>
     <hr />
     <div>
       <h1> Hello</h1>
 <p>
   The time is now:
-  2014-06-01 06:27:41 -0700
+  2014-06-01 06:40:15 -0700
 </p>
 
 <p>
@@ -24,8 +28,9 @@
     </div>
     <hr />
     <div>
-      <h3> I'm a footer</h3>
-      <p>Put things in the footer</p>
+      <h3>Wow!, a footer!</h3>
+      <p>foot foot foot foot</p>
+      <a href='http://github.com'>Linky linkk to Github</a>
     </div>
   </body>
 </html>
