Finished 4th exercise, playing with webrick.

--- a/public/kody.html
+++ b/public/kody.html
@@ -29,6 +29,7 @@
             <li>I think platypus are awesome!</li>
             
         </ul>
+        <p>I also really like science and math!</p>
     </body> 
 </html>
 
